--- a/common/templates/common/indexLogado.html
+++ b/common/templates/common/indexLogado.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empoderarte+</title>
-    <link rel="stylesheet" href="{% static 'css/styleindexdeslogado.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styleindexlogado.css' %}">
 </head>
 <body>
     <header>
@@ -24,7 +24,10 @@
                 <!-- Caso o usuário não tenha foto -->
                 <img src="{% static 'img/default-avatar.png' %}" id="foto_user" alt="Foto de perfil">
             {% endif %}
+
+        
         </div>
+        <p>{{ request.user.first_name }}</p>
     </header>
 
     <main>
@@ -35,9 +38,9 @@
                 <div class="artista">
                     <a id="sub" href="{% url 'artistas:perfil_artista' artista.id %}">
                     <div class="foto">
-                        <img src="{% static artista.foto %}" alt="{{ artista.usuario.user.first_name }}">
+                        <img src="{% static artista.usuario.foto %}" alt="{{ artista.usuario.user.first_name }}">
                     </div>
-                    <p>{{ artista.usuario.user.first_name }}</p>
+                    <p><b>{{ artista.usuario.user.first_name }}</b></p>
                 </a>
                 </div>
                 {% endfor %}
@@ -58,5 +61,30 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-section">
+                <h4>Sobre</h4>
+                <p>O Empoderarte+ é uma plataforma dedicada a conectar mulheres e divulgar suas obras para o mundo.</p>
+            </div>
+            <div class="footer-section">
+                <h4>Links úteis</h4>
+                <ul>
+                    <li><a href="{% url 'common:indexDeslogado' %}">Início</a></li>
+                    <li><a href="{% url 'usuarios:cadastro_usuario' %}">Cadastro</a></li>
+                    <li><a href="{% url 'usuarios:cadastro_usuario' %}">Login</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Contato</h4>
+                <p>Email: contato@empoderarte.com</p>
+                <p>Telefone: (11) 99999-9999</p>
+                <p>Endereço: Rua da Arte, 123 - Espírito Santo, ES</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; {{ ano_atual }} Empoderarte+. Todos os direitos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
