--- a/artistas/templates/artistas/obras.html
+++ b/artistas/templates/artistas/obras.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="navbar">
-            <img src="img/logo.png" alt="Logo EmpoderArte" class="logo">
+            <img src="{% static 'img/logo.png' %}" alt="Logo EmpoderArte" class="logo">
             <input type="text" placeholder="Buscar" class="search-bar">
             <div class="user-info">
                 <span>Rita Lis</span>
@@ -23,7 +23,7 @@
     <main>
         <div class="product-page">
             <div class="product-image">
-                <img src="img/product-placeholder.png" alt="Produto" class="image">
+                <img src="{% static 'static/img/grafite1.jpg' %}" alt="Produto" class="image">
             </div>
             <div class="product-details">
                 <h2>ARTE DA MONALISA</h2>
