--- a/common/templates/common/indexLogado.html
+++ b/common/templates/common/indexLogado.html
@@ -38,11 +38,11 @@
             <div class="lista-artistas">
                 {% for artista in artistas %}
                 <div class="artista">
-                    <a id="sub" href="{% url 'artistas:perfil_artista' artista.id %}">
+                    <a id="sub" href="{% url 'artistas:perfil_artista' artista.id %}"> 
                     <div class="foto">
                         <img src="{% static artista.usuario.foto %}" alt="{{ artista.usuario.user.first_name }}">
                     </div>
-                    <p><b>{{ artista.usuario.user.first_name }}</b></p>
+                    <p>{{ artista.usuario.user.first_name }}</p>
                 </a>
                 </div>
                 {% endfor %}
@@ -54,10 +54,12 @@
             <div class="lista-obras">
                 {% for obra in obras %}
                 <div class="obra">
+                    <a id="sub" href="{% url 'artistas:lista_obras' obra.id %}">
                     <div class="imagem">
                         <img src="{% static obra.imagem %}" alt="{{ obra.titulo }}" class="imgObras">
                     </div>
                     <p>{{ obra.titulo }}</p>
+                    </a>
                 </div>
                 {% endfor %}
             </div>
